[ct] dark mode fixes
* Apply dark mode to the whole page.
* Apply dark mode to the left nav icons.

Bug: skia:10920

--- a/ct/modules/ct-scaffold-sk/ct-scaffold-sk.scss
+++ b/ct/modules/ct-scaffold-sk/ct-scaffold-sk.scss
@@ -46,6 +46,9 @@ ct-scaffold-sk {
   }
 
   /* Overrides to elements-sk elements since they set color internally. */
+  svg.icon-sk-svg {
+    fill: var(--on-surface);
+  }
   app-sk, app-sk > aside {
     background-color: var(--background);
     color: var(--on-background);
